--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,7 @@ android {
         android.applicationVariants.all { variant ->
             variant.outputs.all { output ->
                 def builtType = variant.buildType.name
-                outputFileName = "Mupen64PlusAE-${builtType}.apk"
+                outputFileName = "Mupen64PlusMPN-android.apk"
             }
         }
     }
